--- a/so_long/libraries/libft/Makefile
+++ b/so_long/libraries/libft/Makefile
@@ -12,6 +12,7 @@ SRCS=ft_bzero.c \
      ft_strchr.c \
      ft_strrchr.c \
      ft_strncmp.c \
+     ft_strcmp.c \
      ft_memchr.c \
      ft_memcmp.c \
      ft_strnstr.c \
