fix: create a utils for get next line

--- a/so_long/libraries/libft/Makefile
+++ b/so_long/libraries/libft/Makefile
@@ -44,7 +44,8 @@ SRCS=ft_bzero.c \
      ft_putnbr_u.c\
      get_next_line.c\
      ft_putnbr.c\
-     ft_strjoin_free.c
+     ft_strjoin_free.c\
+     get_next_line_utils.c
 
 OBJS = $(SRCS:.c=.o)
 
